fixed textbox on small screen

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ article{
 
 .text-box.big{
     bottom: 0;
-     height: 10%;
+    height: 10%;
 }
 
 .text-box.big p:first-child{
@@ -203,7 +203,7 @@ article{
 }
     
     .box.small{
-        width: 45%;
+        width: 42%;
         height: 100%;
         transition: all 0.3s ease-out;
         filter: brightness(0.5);
@@ -243,10 +243,25 @@ article{
     }
     
     .box.big{
-    width: 45%;
-    height: 100%;
-    filter: brightness(0.5);
+        width: 42%;
+        height: 100%;
+        filter: brightness(0.5);
     }
+    
+    .text-box{
+        bottom: 0;
+}
+    
+    .text-box.big{
+        bottom: 0;
+        height: 20%;
+}
+    
+    .text-box.big p:first-child{
+        margin-top: 25px;
+        margin-bottom: 5px;
+}
+    
 }
 
 
@@ -288,14 +303,14 @@ article{
     }
     
     header li{
-    display: inline-block;
-    padding-left: 10px;
+        display: inline-block;
+        padding-left: 10px;
     }
     
     .box.big{
-    width: 42%;
-    height: 100%;
-    filter: brightness(0.5);
+        width: 42%;
+        height: 100%;
+        filter: brightness(0.5);
     }
 }
 
